# euler-cfd-solver

./: CMakeLists.txt  README.md
config/: params.yaml  params_2d.yaml
include/: euler.hpp  euler_2d.hpp  param_loader.hpp  utils.hpp
src/: euler.cpp  euler_1d.cpp  euler_2d.cpp  euler_2d_parallel.cpp  param_loader.cpp
